--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
-  "name": "aws-cloudwatch-chart-slack",
-  "version": "0.1.3",
-  "description": "Chart Renderer for AWS CloudWatch Datapoints and Uploader to Slack",
-  "keywords": [
-    "AWS",
-    "CloudWatch",
-    "chart",
-    "upload",
-    "Slack"
-  ],
-  "main": "index.js",
-  "engines": {
-    "node": "~4",
-    "npm": "~2"
-  },
-  "scripts": {
-    "build": "gulp compile",
-    "test": "BABEL_ENV=test mocha --require babel-core/register --recursive",
-    "lint": "gulp eslint",
-    "typecheck": "flow check"
-  },
-  "author": "tmtk75",
-  "license": "MIT",
-  "dependencies": {
-    "aws-sdk": "^2.2.30",
-    "c3": "^0.4.11-rc4",
-    "d3": "^3.5.17",
-    "form-data": "^1.0.0-rc4",
-    "immutable": "^3.7.6",
-    "minimist": "^1.2.0",
-    "moment": "^2.11.1",
-    "node-fetch": "^1.3.3",
-    "phantomjs": "^2.1.7"
-  },
-  "devDependencies": {
-    "babel-core": "^6.3.21",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-espower": "^2.1.0",
-    "babel-plugin-transform-flow-strip-types": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "eslint": "^1.10.3",
-    "eslint-plugin-babel": "^3.0.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
-    "gulp-env": "^0.4.0",
-    "gulp-eslint": "^1.1.1",
-    "gulp-mocha": "^2.2.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
-    "mocha": "^2.3.4",
-    "power-assert": "^1.2.0"
-  },
-  "directories": {
-    "bin": "./bin"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tmtk75/aws-cloudwatch-chart-slack"
-  }
+    "name": "aws-cloudwatch-chart-slack",
+    "version": "0.1.3",
+    "description": "Chart Renderer for AWS CloudWatch Datapoints and Uploader to Slack",
+    "keywords": [
+        "AWS",
+        "CloudWatch",
+        "chart",
+        "upload",
+        "Slack"
+    ],
+    "main": "index.js",
+    "engines": {
+        "node": ">=4",
+        "npm": ">=2"
+    },
+    "scripts": {
+        "build": "gulp compile",
+        "test": "BABEL_ENV=test mocha --require babel-core/register --recursive",
+        "lint": "gulp eslint",
+        "typecheck": "flow check"
+    },
+    "author": "tmtk75",
+    "license": "MIT",
+    "dependencies": {
+        "aws-sdk": "^2.2.30",
+        "c3": "^0.4.11-rc4",
+        "d3": "^3.5.17",
+        "form-data": "^1.0.0-rc4",
+        "immutable": "^3.7.6",
+        "minimist": "^1.2.0",
+        "moment": "^2.11.1",
+        "node-fetch": "^1.3.3",
+        "phantomjs": "^2.1.7"
+    },
+    "devDependencies": {
+        "babel-core": "^6.3.21",
+        "babel-eslint": "^5.0.0-beta6",
+        "babel-loader": "^6.2.0",
+        "babel-plugin-espower": "^2.1.0",
+        "babel-plugin-transform-flow-strip-types": "^6.4.0",
+        "babel-preset-es2015": "^6.3.13",
+        "babel-preset-stage-0": "^6.3.13",
+        "eslint": "^1.10.3",
+        "eslint-plugin-babel": "^3.0.0",
+        "gulp": "^3.9.0",
+        "gulp-babel": "^6.1.1",
+        "gulp-env": "^0.4.0",
+        "gulp-eslint": "^1.1.1",
+        "gulp-mocha": "^2.2.0",
+        "gulp-uglify": "^1.5.1",
+        "gulp-util": "^3.0.7",
+        "mocha": "^2.3.4",
+        "power-assert": "^1.2.0"
+    },
+    "directories": {
+        "bin": "./bin"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/tmtk75/aws-cloudwatch-chart-slack"
+    }
 }
